--- a/.github/workflows/publish-chrome-extension.yml
+++ b/.github/workflows/publish-chrome-extension.yml
@@ -10,31 +10,34 @@ jobs:
   publish:
     runs-on: ubuntu-latest
     steps:
-      - name: Check out repository
-        uses: actions/checkout@v3
+    - name: Check out repository
+      uses: actions/checkout@v3
 
-      - name: Set up Node
-        uses: actions/setup-node@v3
-        with:
-          node-version: '16'
+    - name: Set up Node
+      uses: actions/setup-node@v3
+      with:
+        node-version: '16'
 
-      - name: Install dependencies
-        run: npm ci
+    - name: Install dependencies
+      run: |
+       rm -rf node_modules
+       npm ci
+        
 
       # Build your extension
-      - name: Build extension
-        run: npm run build
+    - name: Build extension
+      run: npm run build
 
       # Zip up the extension
-      - name: Zip extension folder
-        run: zip -r extension.zip dist
+    - name: Zip extension folder
+      run: zip -r extension.zip dist
 
       # Publish extension to Chrome Web Store
-      - name: Publish to Chrome Web Store
-        uses: trmcnvn/chrome-addon@v2
-        with:
-          extension: ${{ secrets.EXTENSION_ID }}
-          zip: extension.zip
-          client-id: ${{ secrets.CLIENT_ID }}
-          client-secret: ${{ secrets.CLIENT_SECRET }}
-          refresh-token: ${{ secrets.REFRESH_TOKEN }}
+    - name: Publish to Chrome Web Store
+      uses: trmcnvn/chrome-addon@v2
+      with:
+        extension: ${{ secrets.EXTENSION_ID }}
+        zip: extension.zip
+        client-id: ${{ secrets.CLIENT_ID }}
+        client-secret: ${{ secrets.CLIENT_SECRET }}
+        refresh-token: ${{ secrets.REFRESH_TOKEN }}
