save work for HE-6247

--- a/.github/workflows/publish-chrome-extension.yml
+++ b/.github/workflows/publish-chrome-extension.yml
@@ -31,14 +31,14 @@ jobs:
     
 
       # Publish extension to Chrome Web Store
-    - name: Publish to Chrome Web Store
-      uses: chromewebstore/chromewebstore-upload-cli@v1
+    - name: Upload to Chrome Web Store
+      uses: mobilefirstllc/cws-publish@latest
       with:
-        extension-id: ${{ secrets.EXTENSION_ID }}
-        client-id: ${{ secrets.CLIENT_ID }}
-        client-secret: ${{ secrets.CLIENT_SECRET }}
-        refresh-token: ${{ secrets.REFRESH_TOKEN }}
-        source-file: "extension.zip"      # The file you zipped earlier
-        auto-publish: true               # Automatically publish if upload succeeds
+        action: 'upload'  # one of: upload, publish, testers
+        client_id: ${{ secrets.CLIENT_ID }}
+        client_secret: ${{ secrets.CLIENT_SECRET }}
+        refresh_token: ${{ secrets.REFRESH_TOKEN }}
+        extension_id: ${{ secrets.EXTENSION_ID }} 
+        zip_file: 'extension.zip'          
     
     
